--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
          <b>副教授、硕士生导师 | Ph.D., A/Prof.</b> <br> -->
       <h1> <b><font size="4">张磊</font></b>  </h1>
       <br>
-         <a href="mailto:lei.zhang@dhu.edu.cn" class="author-social" target="_blank"><i class="fa fa-fw fa-envelope-square"></i></a> 
+         <a href="mailto:lei.zhang@dhu.edu.cn" class="author-social" target="_blank"><i class="fa fa-fw fa-envelope-square"></i> 电子邮箱</a> 
          <a href="https://scholar.google.cz/citations?user=ShHxpioAAAAJ&hl=zh-CN"><i class="fa fa-fw fa-google"></i> Google Scholar</a>
       <br>
          <!-- <b>电子邮箱：lei.zhang@dhu.edu.cn</b> --> 
@@ -95,7 +95,7 @@
         <div align="center" class="social-row">
         <p>东华大学 信息科学与技术学院<br>
         <font size="2">College of Information Sciences & Technology, Donghua University</font><br>-->
-      </header>
+      
       
       <section>
       <p><b><font size="3"> 教育背景 </font></b><br>
@@ -124,6 +124,7 @@
         · Frontiers in Communications and Networks <b>编委</b><br/>
         · IEEE ICEICT 2022 <b>分会主席</b><br/>
         · IEEE COMMUN MAG、IEEE TVT、IEEE TNSM等 期刊审稿人</p> 
+    </header>
 
       <p><b> <font size="3">学术论文 </font> </b><br>
         <font size="0.3">
