--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
           <!-- 这是单行注释 <img src="2.jpg" height="210" width="150" alt="Lei Zhang"></h3> -->
         <!-- <h1> <b><font size="4">张磊 | LEI ZHANG</font></b> </h1>
          <b>副教授、硕士生导师 | Ph.D., A/Prof.</b> <br> -->
-      <h1> <b><font size="4">张磊</font></b>  </h1>
+      <h1> <b><font size="4">张磊</font></b>  副教授、硕导 </h1>
       <br>
          <a href="mailto:lei.zhang@dhu.edu.cn" class="author-social" target="_blank"><i class="fa fa-fw fa-envelope-square"></i> 电子邮箱</a> 
          <a href="https://scholar.google.cz/citations?user=ShHxpioAAAAJ&hl=zh-CN"><i class="fa fa-fw fa-google"></i> Google Scholar</a>
