--- a/index.html
+++ b/index.html
@@ -90,11 +90,8 @@
          <a href="mailto:lei.zhang@dhu.edu.cn" class="author-social" target="_blank"><i class="fa fa-fw fa-envelope-square"></i> 电子邮箱</a> 
          <a href="https://scholar.google.cz/citations?user=ShHxpioAAAAJ&hl=zh-CN"><i class="fa fa-fw fa-google"></i> Google Scholar</a>
       <br>
-         <!-- <b>电子邮箱：lei.zhang@dhu.edu.cn</b> --> 
-        <!-- 这是单行注释<img src="dhu.jpg" height="90" width="300"><br>
+       <img src="CV 单栏.jpg" height="90" width="300"><br>
         <div align="center" class="social-row">
-        <p>东华大学 信息科学与技术学院<br>
-        <font size="2">College of Information Sciences & Technology, Donghua University</font><br>-->
         </header>
       
       <section>
