--- a/index.html
+++ b/index.html
@@ -82,9 +82,7 @@
   <body>
     <div class="wrapper">
       <header align="center">
-          <!-- 这是注释 <img src="2.jpg" height="210" width="150" alt="Lei Zhang"></h3> -->
-        <!-- <h1> <b><font size="4">张磊 | LEI ZHANG</font></b> </h1>
-         <b>副教授、硕士生导师 | Ph.D., A/Prof.</b> <br> -->
+          <img src="2.jpg" height="210" width="150" alt="Lei Zhang"></h3> 
       <h1> <b><font size="6">张磊</font></b>  <font size="2">副教授、硕导</font> </h1>
       <br>
          <a href="mailto:lei.zhang@dhu.edu.cn" class="author-social" target="_blank"><i class="fa fa-fw fa-envelope-square"></i> 电子邮箱</a> 
@@ -95,7 +93,6 @@
         </header>
       
       <section>
-     <!-- 这是注释  
       <p><b><font size="3"> 教育背景 </font></b><br>
         2012-2016	Universidad Politécnica de Madrid 信息系统工程  博士(Cum Laude)<br/>
         2010-2012	合肥工业大学  信号与信息处理   硕士研究生(公派出国)<br/>
@@ -113,7 +110,6 @@
         · Frontiers in Communications and Networks <b>编委</b><br/>
         · IEEE ICEICT 2022 <b>分会主席</b><br/>
         · IEEE COMMUN MAG、IEEE TVT、IEEE TNSM等 期刊审稿人</p> 
-  -->
         
       <p><b> <font size="3">学术论文 </font> </b><br>
         <font size="0.3">
