--- a/index.html
+++ b/index.html
@@ -83,18 +83,18 @@
     <div class="wrapper">
       <header align="center">
           <img src="2.jpg" height="210" width="150" alt="Lei Zhang"></h3> 
-      <h1> <b><font size="6">张磊</font></b>  <font size="2">副教授、硕导</font> </h1>
+      <h1> <b><font size="4">张磊</font></b>  <font size="2">副教授、硕导</font> </h1>
       <br>
-         <a href="mailto:lei.zhang@dhu.edu.cn" class="author-social" target="_blank"><i class="fa fa-fw fa-envelope-square"></i> 电子邮箱</a> 
-         <a href="https://scholar.google.cz/citations?user=ShHxpioAAAAJ&hl=zh-CN"><i class="fa fa-fw fa-google"></i> Google Scholar</a>
+         <a href="mailto:lei.zhang@dhu.edu.cn" class="author-social" target="_blank"><i class="fa fa-fw fa-envelope-square"></i> 电子邮箱</a>
       <br>
-      <b><font size="1">上海市松江区人民北路2999号2号学院楼618<br/>
+      <font size="1">上海市松江区人民北路2999号2号学院楼618<br/>
         </header>
       
       <section>
       <p><b><font size="3"> 个人简介 </font></b><br>
-      男，1988年生，东华大学信息科学与技术学院副教授、硕士生导师，通信工程系副主任。2009年本科毕业于安徽大学，2012-2016年受国家留学基金委公派赴西班牙马德里理工大学（Universidad Politécnica de Madrid，UPM）学习，获UPM硕士和博士学位（Cum Laude & Premio Extraordinarios de Doctorado），美国南卡罗莱纳大学电子电气工程系访问学者。
-        主要围绕无线信道特性及情境感知开展研究，主持国家自然科学基金、上海市松江区科技攻关项目及企业横向课题等，参与中央军委科技委GF项目及国家自然科学基金面上项目等多项。近年来在国内外重要学术期刊和会议上发表学术论文40余篇，申请国家发明专利6项。
+      男，1988年生，东华大学信息科学与技术学院副教授、硕士生导师，通信工程系副主任。<br/>
+      2009年本科毕业于安徽大学，2012-2016年受国家留学基金委公派赴西班牙马德里理工大学（Universidad Politécnica de Madrid，UPM）学习，获UPM硕士和博士学位（Cum Laude & Premio Extraordinarios de Doctorado），University of South Carolina访问学者。<br/>
+      主要围绕无线信道特性及情境感知开展研究，主持国家自然科学基金、上海市松江区科技攻关项目及企业横向课题等，参与中央军委科技委GF项目及国家自然科学基金面上项目等多项。近年来在国内外重要学术期刊和会议上发表学术论文40余篇，申请国家发明专利6项。
       </p> 
     <!--  <p><b><font size="3"> 教育背景 </font></b><br>
         2012-2016	Universidad Politécnica de Madrid 信息系统工程  博士(Cum Laude)<br/>
@@ -116,12 +116,14 @@
         ·	<b>L. Zhang</b>, J. Rodriguez Pineiro, J. R. O. Fernandez, J. A. Garcia-Naya, D. W. Matolak, C. Briso, L. Castedo, “Propagation Modeling for Outdoor-to-Indoor and Indoor-to-Indoor Wireless Links in High-speed Train,” <b><i>Measurement</i></b>, vol. 110, no., pp.43-52, 2017 (<b>中科院二区, IF=5.131</b>)<br/>
         ·	<b>L. Zhang</b>, C. Briso, J.R.O. Fernandez, J.I. Alonso, C. Rodriguez, J. Moreno Garcia, K. Guan, “Delay Spread and Electromagnetic Reverberation in Subway Tunnels and Stations,” <b><i>IEEE Antennas and Wireless Propagation Letters</i></b>, vol. 15, no., pp.585-588, 2016 (<b>中科院Top, IF=3.825</b>)<br/>
         ·	M. Zhai, <b>L. Zhang*(通讯作者)</b>, D. Li, “Efficient Modeling of Dispersive Media in Leapfrog WCS-FDTD Method,” <b><i>IEEE Microwave and Wireless Components Letters</i></b>, vol. 30, no. 3, pp. 225-228, 2020 (<b>中科院二区, IF=2.719</b>)<br/>
+        更多论文见 Google Scholar <a href="https://scholar.google.cz/citations?user=ShHxpioAAAAJ&hl=zh-CN"><i class="fa fa-fw fa-google"></i> Google Scholar</a> <br/>
+        <!-- 
         ·	<b>L. Zhang</b>, Y. Zhu, M. Jiang, Y. Wu, K. Deng, Q. Ni, “Body Temperature Monitoring for Regular COVID-19 Prevention Based on Human Daily Activity Recognition,” <b><i>Sensors</i></b>, vol. 21, no. 22, pp. 7540-7558, 2021 (<b>SCI, IF=3.847</b>)<br/>
         ·	<b>L. Zhang</b>, Q. Ni, G. Zhang, M. Zhai, J. Moreno, C. Briso, “Random Forests-enabled Context Detections for Long-term Evolution Network for Railway,” <b><i>IET Microwaves Antennas & Propagation</i></b>, Vol. 13, Issue 8, p. 1080-1086, 2019 (<b>SCI, IF=2.036</b>)<br/>
         ·	<b>L. Zhang</b>, J. Moreno, C. Briso, “Experimental Characterization and Modelling of Intra-Car Communications Inside High-Speed Trains,” <b><i>IET Microwaves Antennas & Propagation</i></b>, Vol. 13, no. 8, p. 1060 -1064, 2019 (<b>SCI, IF=2.036</b>)<br/>
         ·	L. Lin, <b>L. Zhang*(通讯作者)</b>, “Joint Optimization of Offloading and Resource Allocation for SDN-Enabled IoV,” <b><i>Wireless Communications & Mobile Computing</i></b>, vol. 2022, no., pp.1-13, 2022 (<b>SCI, IF=2.146</b>)<br/>
         ·	Q. Ni, Z. Fan, <b>L. Zhang*(通讯作者)</b>, B. Zhang, X. Zheng, Y. Zhang, “Daily Activity Recognition and Tremor Quantification from Accelerometer Data for Patients with Essential Tremor Using Stacked Denoising Autoencoders,” <b><i>International Journal of Computational Intelligence Systems</i></b>, vol. 15, no.1, pp. 1-13, 2022 (<b>SCI, IF=2.259</b>)<br/>
-        ...
+         -->
         </font>
         </p>
           
