--- a/index.html
+++ b/index.html
@@ -91,18 +91,20 @@
         东华大学 信息科学与技术学院
         <br>
         上海市松江区人民北路2999号2号学院楼618<br/>
-        <br>
         <p><b><font size="2"> 研究方向 </font></b><br>
         <div align="center">
-        · Wireless Channel Sounding & Modeling<br/>                                 
-        · XAI enabled Contex Awareness<br/>                               
+        · Wireless Channel Sounding & Modeling<br/>     
+          <br>
+        · XAI enabled Contex Awareness<br/>  
+          <br>
         · IoB Optimization & Resource Allocation<br/>  
         </div>
         </header>
       
       <section>
       <p><b><font size="2"> 个人简介 </font></b><br>
-      2009年本科毕业于安徽大学通信工程专业，2012-2016年受国家留学基金委公派赴西班牙马德里理工大学（Universidad Politécnica de Madrid，UPM）学习，获UPM硕士和博士学位（Cum Laude & Premio Extraordinarios de Doctorado），University of South Carolina访问学者。<br/>
+      2009年本科毕业于安徽大学通信工程专业，2012-2016年受国家留学基金委公派赴西班牙马德里理工大学(Universidad Politécnica de Madrid, UPM)学习，获UPM硕士和博士学位(Cum Laude)，University of South Carolina访问学者。<br/>
+      <br>
       主持国家自然科学基金、上海市松江区科技攻关项目及企业横向课题等，参与中央军委科技委GF项目及国家自然科学基金面上项目等多项。近年来在国内外重要学术期刊和会议上发表学术论文40余篇，申请国家发明专利6项。
       </p> 
     <!--  <p><b><font size="2"> 教育背景 </font></b><br>
@@ -119,12 +121,12 @@
        -->     
       <p><b> <font size="2">代表论文 </font> </b><br>
         <font size="0.2">
-        [1] <b>L. Zhang</b>, P. Lin, “Reinforcement Learning Based Energy-Neutral Operation for Hybrid EH Powered TBAN,” <b><i>Future Generation Computer Systems</i></b>, vol. 140, no. , pp. 311-320, 2023. (<b>中科院Top, IF=7.307</b>)<br/>
-        [2]	<b>L. Zhang</b>, X. Chu, M. Zhai, “Machine Learning-Based Integrated Wireless Sensing and Positioning for Cellular Network,” <b><i>IEEE Transactions on Instrumentation and Measurement</i></b>, vol. 72, pp. 1-11, 2023, Art no. 5501011. (<b>中科院二区, IF=5.332</b>)<br/>
-        [3]	<b>L. Zhang</b>, P. Lin, K. Deng, G. Huang, J. Feng, “Joint Optimization of Energy and QoS for Smart Clothing with Multi-posture Participation,” <b><i>IEEE Sensors Journal</i></b>, vol. 22, no. 23, pp. 23529-23538, 2022. (<b>中科院Top, IF=4.325</b>)<br/>
-        [4]	<b>L. Zhang</b>, J. Rodriguez Pineiro, J. R. O. Fernandez, J. A. Garcia-Naya, D. W. Matolak, C. Briso, L. Castedo, “Propagation Modeling for Outdoor-to-Indoor and Indoor-to-Indoor Wireless Links in High-speed Train,” <b><i>Measurement</i></b>, vol. 110, no., pp.43-52, 2017 (<b>中科院二区, IF=5.131</b>)<br/>
-        [5]	<b>L. Zhang</b>, C. Briso, J.R.O. Fernandez, J.I. Alonso, C. Rodriguez, J. Moreno Garcia, K. Guan, “Delay Spread and Electromagnetic Reverberation in Subway Tunnels and Stations,” <b><i>IEEE Antennas and Wireless Propagation Letters</i></b>, vol. 15, no., pp.585-588, 2016 (<b>中科院Top, IF=3.825</b>)<br/>
-        [6]	M. Zhai, <b>L. Zhang*(通讯作者)</b>, D. Li, “Efficient Modeling of Dispersive Media in Leapfrog WCS-FDTD Method,” <b><i>IEEE Microwave and Wireless Components Letters</i></b>, vol. 30, no. 3, pp. 225-228, 2020 (<b>中科院二区, IF=2.719</b>)<br/>
+        [1] <b>L. Zhang</b>, P. Lin, “Reinforcement Learning Based Energy-Neutral Operation for Hybrid EH Powered TBAN,” <b><i>Future Generation Computer Systems</i></b>, vol. 140, no. , pp. 311-320, 2023. (<b>中科院Top</b>)<br/>
+        [2]	<b>L. Zhang</b>, X. Chu, M. Zhai, “Machine Learning-Based Integrated Wireless Sensing and Positioning for Cellular Network,” <b><i>IEEE Transactions on Instrumentation and Measurement</i></b>, vol. 72, pp. 1-11, 2023, Art no. 5501011. (<b>中科院二区</b>)<br/>
+        [3]	<b>L. Zhang</b>, P. Lin, K. Deng, G. Huang, J. Feng, “Joint Optimization of Energy and QoS for Smart Clothing with Multi-posture Participation,” <b><i>IEEE Sensors Journal</i></b>, vol. 22, no. 23, pp. 23529-23538, 2022. (<b>中科院Top</b>)<br/>
+        [4]	<b>L. Zhang</b>, J. Rodriguez Pineiro, J. R. O. Fernandez, J. A. Garcia-Naya, D. W. Matolak, C. Briso, L. Castedo, “Propagation Modeling for Outdoor-to-Indoor and Indoor-to-Indoor Wireless Links in High-speed Train,” <b><i>Measurement</i></b>, vol. 110, no., pp.43-52, 2017 (<b>中科院二区</b>)<br/>
+        [5]	<b>L. Zhang</b>, C. Briso, J.R.O. Fernandez, J.I. Alonso, C. Rodriguez, J. Moreno Garcia, K. Guan, “Delay Spread and Electromagnetic Reverberation in Subway Tunnels and Stations,” <b><i>IEEE Antennas and Wireless Propagation Letters</i></b>, vol. 15, no., pp.585-588, 2016 (<b>中科院Top</b>)<br/>
+        [6]	M. Zhai, <b>L. Zhang*(通讯作者)</b>, D. Li, “Efficient Modeling of Dispersive Media in Leapfrog WCS-FDTD Method,” <b><i>IEEE Microwave and Wireless Components Letters</i></b>, vol. 30, no. 3, pp. 225-228, 2020 (<b>中科院二区</b>)<br/>
         ...
        <br>
        A COMPLETE LIST: <a href="https://scholar.google.cz/citations?user=ShHxpioAAAAJ&hl=zh-CN"><i class="fa fa-fw fa-google"></i> Google Scholar</a> <br/>
@@ -170,7 +172,7 @@
         ·	长三角G60科创走廊突出贡献人才 2021<br/>
         ·	TI杯全国大学生电子设计竞赛上海赛区优秀指导教师奖 2021<br/>
         ·	东华大学群众体育先进个人 2021<br/>
-        ·	Premio Extraordinarios de Doctorado, UPM 2018<br/>
+        ·	Premios Extraordinario de Doctorado, UPM 2018<br/>
         </p>
         
       <p><b> <font size="2">主讲课程</font></b><br>
