--- a/index.html
+++ b/index.html
@@ -84,11 +84,11 @@
       <header align="center">
           <img src="2.jpg" height="210" width="150" alt="Lei Zhang"></h3> 
       <h1> <b><font size="4">张磊</font></b>  <font size="2">副教授、硕导</font> </h1>
-      <br>
-         <a href="mailto:lei.zhang@dhu.edu.cn" class="author-social" target="_blank"><i class="fa fa-fw fa-envelope-square">lei.zhang [AT] dhu.edu.cn</i></a>
-      <br>
-        东华大学 信息科学与技术学院<br/>
         <br>
+        <b>东华大学 信息科学与技术学院</b><br/>
+        <br>
+         <a href="mailto:lei.zhang@dhu.edu.cn" class="author-social" target="_blank"><i class="fa fa-fw fa-envelope-square">lei.zhang [AT] dhu.edu.cn</i></a>
+       <br> 
         <font size="0.5">上海市松江区人民北路2999号2号学院楼618</font> <br/>
         <br>
         <p><b><font size="2"> 研究方向 </font></b><br>
