--- a/index.html
+++ b/index.html
@@ -87,12 +87,14 @@
         <br>
         <b>东华大学 信息科学与技术学院</b><br/>
         <br>
-         <a href="mailto:lei.zhang@dhu.edu.cn" class="author-social" target="_blank"><i class="fa fa-fw fa-envelope-square">lei.zhang [AT] dhu.edu.cn</i></a>
-       <br> 
-        <font size="0.5">上海市松江区人民北路2999号2号学院楼618</font> <br/>
+        <div align="left">
+        <font size="0.5">
+        <a href="mailto:lei.zhang@dhu.edu.cn" class="author-social" target="_blank"><i class="fa fa-fw fa-envelope-square">lei.zhang [AT] dhu.edu.cn</i></a>
+        <br> 
+        上海市松江区人民北路2999号2号学院楼618</font> <br/>
         <br>
         <p><b><font size="2"> 研究方向 </font></b><br>
-        <div align="left">
+       
         · Wireless Channel Sounding & Modeling<br/>     
           <br>
         · XAI enabled Contex Awareness<br/>  
