--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
         <br>
         <div align="left">
         <font size="0.5">
-        <a href="mailto:lei.zhang@dhu.edu.cn" class="author-social" target="_blank"><i class="fa fa-fw fa-envelope-square"> lei.zhang [AT] dhu.edu.cn</i></a>
+        <a href="mailto:lei.zhang@dhu.edu.cn" class="author-social" target="_blank"><i class="fa fa-fw fa-envelope-square"> lei.zhang AT dhu.edu.cn</i></a>
         <br> 
         上海市松江区人民北路2999号2号学院楼618</font> <br/>
         <br>
