--- a/index.html
+++ b/index.html
@@ -86,11 +86,11 @@
       <h1> <b><font size="4">张磊</font></b>  <font size="2">副教授、硕导</font> </h1>
         <b>东华大学 信息科学与技术学院</b><br/>
         <br>
-        <div align="left">
-        <font size="0.5">
-        <a href="mailto:lei.zhang@dhu.edu.cn" class="author-social" target="_blank"><i class="fa fa-fw fa-envelope-square"> lei.zhang AT dhu.edu.cn</i></a>
+      <div align="left">
+        <a href="mailto:lei.zhang@dhu.edu.cn" class="author-social" target="_blank"><i class="fa fa-fw fa-envelope-square"></i></a>
+          <i class="fa-brands fa-researchgate"></i>
         <br> 
-        上海市松江区人民北路2999号2号学院楼618</font> <br/>
+        <font size="0.5">上海市松江区人民北路2999号2号学院楼618</font> <br/>
         <br>
         <p><b><font size="2"> 研究方向 </font></b><br>
        
