--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
         <br>
       <div align="left">
         <a href="mailto:lei.zhang@dhu.edu.cn" class="author-social" target="_blank"><i class="fa fa-fw fa-envelope-square"></i></a>
-          <i class="fa-brands fa-researchgate"></i>
+        <a href="https://www.researchgate.net/profile/Lei-Zhang-338" class="author-social" target="_blank"><i class="fa-brands fa-researchgate"></i></a>
         <br> 
         <font size="0.5">上海市松江区人民北路2999号2号学院楼618</font> <br/>
         <br>
