--- a/index.html
+++ b/index.html
@@ -86,13 +86,16 @@
       <h1> <b><font size="4">张磊</font></b>  <font size="2">副教授、硕导</font> </h1>
         <b>东华大学 信息科学与技术学院</b><br/>
         <br>
-        电子邮箱： <a href="mailto:lei.zhang@dhu.edu.cn" class="author-social" target="_blank"><i class="fa fa-fw fa-envelope-square"></i></a>
+         <!-- 电子邮箱： <a href="mailto:lei.zhang@dhu.edu.cn" class="author-social" target="_blank"><i class="fa fa-fw fa-envelope-square"></i></a>
         <a href="https://www.researchgate.net/profile/Lei-Zhang-338" class="author-social" target="_blank"><i class="fa-brands fa-researchgate"></i></a>
-        <br> 
-        <font size="0.5">上海市松江区人民北路2999号2号学院楼618</font> <br/>
+        <br> --> 
+        <font size="0.5">上海市松江区人民北路2999号2号学院楼618 <br/>
+          E-MAIL: lei.zhang [AT] dhu.edu.cn
+        </font>
         <br>
-        <div align="left">
-        <p><b><font size="2"> 个人简介 </font></b><br>       
+        
+        %<div align="left">
+        <p text-justify:inter-ideograph><b><font size="2"> 个人简介 </font></b><br>       
           2009年本科毕业于安徽大学，2012-2016年受国家公派赴西班牙马德里理工大学（Universidad Politécnica de Madrid，UPM）学习，
           获UPM硕士和博士学位（Cum Laude & Premio Extraordinarios de Doctorado），美国南卡罗莱纳大学访问学者。
           长期从事通信与信息系统学科教学及无线通信感知、身联网可穿戴计算等前沿方向的科学研究工作。
@@ -101,8 +104,8 @@
         </header>
       
       <section>
-      <p><b><font size="2"> 个人简介 </font></b><br>
-    <!--  <p><b><font size="2"> 教育背景 </font></b><br>
+     <!--   <p><b><font size="2"> 个人简介 </font></b><br>
+        <p><b><font size="2"> 教育背景 </font></b><br>
         2012-2016	Universidad Politécnica de Madrid 信息系统工程  博士(Cum Laude)<br/>
         2010-2012	合肥工业大学  信号与信息处理   硕士研究生(公派出国)<br/>
         2005-2009	安徽大学  通信工程  本科</p>
