--- a/index.html
+++ b/index.html
@@ -118,14 +118,14 @@
        -->     
       <p><b> <font size="3"> 科研项目 </font> </b><br>
         <font size="2">
-      国家自然科学基金面上项目(62371118): 面向可信身联网的情境协同感知及能量中性管理研究, 2024.01-2027.12,  <b>主持</b><br/>
-      国家自然科学基金青年基金(61901104): 考虑地物影响的低空无人机与地面车辆通信信道特性研究, 2020.01-2022.12,  <b>主持</b><br/>
-      国家自然科学基金面上项目(62072096): 面向边缘智能的车联网计算通信与路径优化, 2021.01-2024.12,  <b>第二负责人</b><br/>
-      上海市松江区科技攻关项目(20SJKJGG4C): 基于软件无线电的Massive MIMO原型系统研究, 2020.9-2022.5, <b>主持</b><br/>
-      中央高校基本科研业务费专项资金自由探索项目(19D110407): 面向5G动态场景下的电波传播感知与特性分析, 2019.01-2021.12, <b>主持</b><br/>
-      中央JW科技委GF项目(19-163-21-TS-001-014-01): 频率与极化可重构集成滤波天线研究, 2019.01-2020.12, 参加
-      企业委托项目(HX104220244): 岸海散射信道建模, 2022.1-2022.12, <b>主持</b><br/>
-      企业委托项目(HX104210835): 基于SDR的车联网通信系统研究，2021.7-2022.6, <b>主持</b><br/></p>
+      <b>国家自然科学基金面上项目</b>(62371118): 面向可信身联网的情境协同感知及能量中性管理研究, 2024.01-2027.12,  <b>主持</b><br/>
+      <b>国家自然科学基金青年基金</b>(61901104): 考虑地物影响的低空无人机与地面车辆通信信道特性研究, 2020.01-2022.12,  <b>主持</b><br/>
+      <b>国家自然科学基金面上项目</b>(62072096): 面向边缘智能的车联网计算通信与路径优化, 2021.01-2024.12,  <b>第二负责人</b><br/>
+      <b>上海市松江区科技攻关项目</b>(20SJKJGG4C): 基于软件无线电的Massive MIMO原型系统研究, 2020.9-2022.5, <b>主持</b><br/>
+      <b>中央高校基本科研业务费专项资金自由探索项目</b>(19D110407): 面向5G动态场景下的电波传播感知与特性分析, 2019.01-2021.12, <b>主持</b><br/>
+      <b>中央JW科技委GF项目</b>(19-163-21-TS-001-014-01): 频率与极化可重构集成滤波天线研究, 2019.01-2020.12, 参加 <br/>
+      <b>企业委托项目(HX104220244)</b>: 岸海散射信道建模, 2022.1-2022.12, <b>主持</b><br/>
+      <b>企业委托项目(HX104210835)</b>: 基于SDR的车联网通信系统研究，2021.7-2022.6, <b>主持</b><br/></p>
        </font>
         
       <p><b> <font size="3">代表论文 </font> </b><br>
