--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
   <body>
     <div class="wrapper">
       <header align="center">
-          <img src="2.jpg" height="210" width="150" alt="Lei Zhang"></h3> 
+          <img src="profile-3.jpg" height="210" width="150" alt="Lei Zhang"></h3> 
       <h1> <b><font size="4">张磊</font></b>  <font size="2">副教授、硕导</font> </h1>
         <b>东华大学 信息科学与技术学院</b><br/>
         <br>
